--- a/src/Assets/Comment/Control/Show/Short.html
+++ b/src/Assets/Comment/Control/Show/Short.html
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-body">
         <div class="pull-right">
-            <layout>Control.Pills:RUD</layout>
+            <layout>Control.Pills:MRUD</layout>
         </div>
         <cut words="10">
             <k>Body</k>
