--- a/src/Assets/Entity/Reject.html
+++ b/src/Assets/Entity/Reject.html
@@ -1,10 +1,14 @@
-<h2>Вы уверены, что хотите отвергнуть?</h2>
-<form action="" method="post" class="form-vertical">
-    <place>Content</place>
-
-    <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
-    <div class="form-actions">
-        <button type="submit" class="btn btn-danger">Отвергнуть</button>
-        <a href="<call>Request.BackURL</call>" class="btn btn-success">Я передумал</a>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        Отвергунть эти элементы?
     </div>
-</form>
+    <div class="panel-body">
+        <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
+            <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
+            <place>Content</place>
+
+            <button type="submit" class="btn btn-danger">Отвергнуть</button>
+            <a href="<call>Request.BackURL</call>" class="btn btn-success">Я передумал</a>
+        </form>
+    </div>
+</div>
