--- a/src/Assets/Entity/Reject.html
+++ b/src/Assets/Entity/Reject.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        Отвергунть эти элементы?
+        Отвергнуть эти элементы?
     </div>
     <div class="panel-body">
         <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
