--- a/src/Assets/Comment/Show/Full.html
+++ b/src/Assets/Comment/Show/Full.html
@@ -1,6 +1,16 @@
 <subtitle>Комментарий №<k>ID</k></subtitle>
 <breadcrumb href="/comment/<k>ID</k>">Комментарий №<k>ID</k></breadcrumb>
-<h2 class="page-header">Комментарий №<k>ID</k> к «<entity><k>Entity</k>:<k>Object</k></entity>»</h2>
+<h2 class="page-header">Комментарий №<k>ID</k></h2>
+
+<exec>
+    <Service>Entity.Show.Static</Service>
+    <Method>Do</Method>
+    <Call>
+        <Entity><k>Entity</k></Entity>
+        <Object><k>Object</k></Object>
+        <Template>Short</Template>
+    </Call>
+</exec>
 
 <div class="panel panel-default">
     <div class="panel-body">
