--- a/src/Assets/Project/Zone.html
+++ b/src/Assets/Project/Zone.html
@@ -2,7 +2,7 @@
 <subtitle><call>Project.Title</call></subtitle>
 
 <div class="container">
-    <nav class="navbar-default" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
               <span class="sr-only">Навигация</span>
