--- a/src/Assets/bootstrap3/Widgets/Form/Redactor.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Redactor.html
@@ -1,13 +1,13 @@
 <css>redactor</css>
 <js>redactor</js>
 <js>redactor:ru</js>
-    <label class="control-label" for="<k>ID</k>"><l><k>Label</k></l>
+<div class="form-group">
+    <label for="<k>ID</k>"><l><k>Label</k>:</l>
         <if value="<k>Required</k>" eq="required"><span class="required-star">*</span></if>
         <if value="<k>Filled</k>" eq="1"><span class="filled-star" title="Рекомендуемое поле">*</span></if>
     </label>
-    <div class="controls">
-        <textarea class="col-md-12" id="<k>ID</k>" <block>required="<k>Required</k>"</block> name="<k>Name</k>"><k>Value</k></textarea>
-    </div>
+    <textarea class="form-control" id="<k>ID</k>" <block>required="<k>Required</k>"</block> name="<k>Name</k>"><k>Value</k></textarea>
+</div>
 <jsrun>
     $("#<k>ID</k>").redactor({lang: "ru", imageUpload: "/uploader", wym: true});
 </jsrun>
