--- a/src/Assets/bootstrap3/Widgets/Form/Select.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Select.html
@@ -1,6 +1,5 @@
 <div class="form-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:
-</label>
+    <label for="<k>Name</k>"> <l><k>Label</k></l>:</label>
     <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>" class="form-control">
         <k>Options</k>
     </select>
