--- a/src/Assets/bootstrap3/Widgets/Form/Select2.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Select2.html
@@ -1,11 +1,9 @@
 <div class="form-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:
+    <label for="<k>Name</k>"> <l><k>Label</k></l>:
 </label>
-    <div class="controls">
-        <select id="<k>ID</k>" <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>">
-            <k>Options</k>
-        </select>
-    </div>
+    <select id="<k>ID</k>" class="select2" <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>">
+        <k>Options</k>
+    </select>
 </div>
 <jsrun>
     $('#<k>ID</k>').select2({width: "100%"});
