--- a/src/Assets/bootstrap3/Widgets/Navlist/Passive.html
+++ b/src/Assets/bootstrap3/Widgets/Navlist/Passive.html
@@ -6,6 +6,6 @@
             <Width>16</Width>
         </image>
         <k>Title</k>
-        <block><span class="pull-right"><k>Count</k></span></block>
+        <block><span class="badge pull-right"><k>Count</k></span></block>
     </a>
 </li>
