--- a/src/Assets/bootstrap3/Widgets/Form/Radiogroup.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Radiogroup.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label class="control-label"><l><k>Label</k>.Label</l></label>
+    <label><l><k>Label</k>.Label</l></label>
 
     <div class="controls">
         <k>Radios</k>
