--- a/src/Assets/User/Authenticate/Incorrect.html
+++ b/src/Assets/User/Authenticate/Incorrect.html
@@ -1,4 +1,4 @@
 <h2 class="page-header">Логин или пароль неверны</h2>
 
-<a href="/login">Попробовать ещё раз</a>
-<a href="/forgot">Забыли пароль?</a>
+<a class="btn btn-default" href="/login">Попробовать ещё раз</a>
+<a class="btn btn-default" href="/forgot">Забыли пароль?</a>
