--- a/src/Assets/User/Reset/Form.html
+++ b/src/Assets/User/Reset/Form.html
@@ -1,8 +1,12 @@
 <h2 class="page-header">Восстановление пароля</h2>
-<form class="form-horizontal" action="" method="post">
-    <div class="form-group">
-        <label for="EMail">EMail</label>
-            <input class="form-control" id="EMail" type="email" name="EMail" autofocus required />
+<div class="panel panel-default">
+    <div class="panel-body">
+        <form role="form" action="" method="post">
+            <div class="form-group">
+                <label for="EMail">EMail</label>
+                    <input class="form-control" id="EMail" type="email" name="EMail" autofocus required />
+            </div>
+            <input class="btn btn-danger" type="submit" value="Сбросить"/>
+        </form>
     </div>
-    <input class="btn btn-danger" type="submit" value="Сбросить"/>
-</form>
+</div>
