Activation & other bugfixes.

--- a/src/Assets/bootstrap3/Widgets/Form/Radio.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Radio.html
@@ -1,4 +1,4 @@
 <label class="radio-inline">
     <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <k>Checked</k>>
-    <l><k>Entity</k>.Entity:<k>Node</k>.<k>Value</k></l>
+    <k>Value</k>
 </label>
