Sessions & Renderer fixes.

--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -7,17 +7,10 @@
             <div class="form-group">
                 <label for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
                 <input class="form-control input-lg" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required" autofocus="autofocus"/>
-                <div class="help-block">
-                <a href="/join">Регистрация</a>
-                </div>
             </div>
             <div class="form-group">
                 <label for="Password">Пароль:</label>
                 <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
-
-                <div class="help-block">
-                <a class="forgot" href="/forgot">Забыли пароль?</a>
-                </div>
             </div>
 
             <div class="form-group">
@@ -25,6 +18,10 @@
             </div>
 
             <button type="submit" class="btn btn-success">Войти</button>
+            <div class="pull-right">
+                <a class="btn btn-primary" href="/join">Регистрация</a>
+                <a class="btn btn-warning" href="/forgot">Забыли пароль?</a>
+            </div>
         </form>
     </div>
 </div>
