--- a/src/Assets/Session/Control/Show/Short.html
+++ b/src/Assets/Session/Control/Show/Short.html
@@ -1,14 +1,12 @@
 <tr>
     <td>
-        <datetime format="H:i:s d.m.Y"><k>Created</k></datetime>
+        <datetime><k>Created</k></datetime>
     </td>
     <td>
-        <datetime format="H:i:s d.m.Y"><k>Expire</k></datetime>
+        <datetime><k>Expire</k></datetime>
     </td>
-    <td><datetime format="H:i:s d.m.Y"><k>Heartbeat</k></datetime></td>
     <td>
-        <k>IP</k>
-    </td>
+        <k>IP</k></td>
     <td>
         <entity>User:<k>User</k></entity>
     </td>
