--- a/src/Assets/Session/Control/Show/Short.html
+++ b/src/Assets/Session/Control/Show/Short.html
@@ -6,7 +6,11 @@
         <datetime><k>Expire</k></datetime>
     </td>
     <td>
-        <k>IP</k></td>
+        <block>
+            <img src="http://codeine-framework.ru/utils/ip-flag/<k>IP</k>" width="16" height="16"/> &nbsp;
+            <k>IP</k>
+        </block>
+    </td>
     <td>
         <entity>User:<k>User</k></entity>
     </td>
