--- a/src/Assets/bootstrap3/Widgets/Form.html
+++ b/src/Assets/bootstrap3/Widgets/Form.html
@@ -1,5 +1,10 @@
 <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
     <div class="panel panel-default">
+        <block>
+            <div class="panel-heading">
+                <k>Title</k>
+            </div>
+        </block>
         <div class="panel-body">
             <input type="hidden" name="BackURL" value="<k>BackURL</k>" />
             <place>Form</place>
