--- a/src/Assets/Message/Main.html
+++ b/src/Assets/Message/Main.html
@@ -1,15 +1,12 @@
 <subtitle><l>Message.Control:Title</l></subtitle>
 <breadcrumb href="/messages"><l>Message.Control:Title</l></breadcrumb>
 
-<div class="toolbar btn-group">
-    <a class="btn btn-large" href="/message/new">Создать сообщение</a>
+<div class="toolbar btn-group-lg">
+    <a class="btn btn-primary" href="/message/new">Создать сообщение</a>
 
-    <a class="btn btn-large" href="/messages/inbox">Входящие
-    </a>
+    <a class="btn btn-default" href="/messages/inbox">Входящие</a>
 
-    <a class="btn btn-large" href="/messages/outbox">Исходящие
-
-    </a>
+    <a class="btn btn-default" href="/messages/outbox">Исходящие</a>
 </div>
 
 <place>Content</place>
