--- a/src/Assets/bootstrap3/Widgets/Form/Static.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Static.html
@@ -1,4 +1,4 @@
- <div class="form-group">
-    <label><k>Label</k></label>
-    <p class="form-control-static"><k>Value</k></p>
-  </div>
+<div class="form-group">
+    <label><l><k>Label</k></l>:</label>
+    <div class="form-control-static"><k>Value</k></div>
+</div>
