--- a/src/Assets/Entity/Accept.html
+++ b/src/Assets/Entity/Accept.html
@@ -3,7 +3,7 @@
         Одобрить эти элементы?
     </div>
     <div class="panel-body">
-        <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
+        <form role="form" method="post" enctype="multipart/form-data" autocomplete="on">
             <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
             <place>Content</place>
 
