--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -18,6 +18,7 @@
             </div>
 
             <button type="submit" class="btn btn-success">Войти</button>
+            <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
             <div class="pull-right">
                 <a class="btn btn-primary" href="/join">Регистрация</a>
                 <a class="btn btn-warning" href="/forgot">Забыли пароль?</a>
