--- a/src/Assets/Comment/Show/Full.html
+++ b/src/Assets/Comment/Show/Full.html
@@ -7,7 +7,7 @@
     <Method>Do</Method>
     <Call>
         <Entity><k>Entity</k></Entity>
-        <Object><k>Object</k></Object>
+        <Where><k>Object</k></Where>
         <Template>Short</Template>
     </Call>
 </exec>
