--- a/src/Assets/Comment/Include.html
+++ b/src/Assets/Comment/Include.html
@@ -19,6 +19,7 @@
     <Call>
         <PageURL>/comments/<call>Entity</call>/<k>ID</k>/page</PageURL>
         <Entity>Comment</Entity>
+        <Template>Include</Template>
         <Where>
             <Entity><call>Entity</call></Entity>
             <Object><k>ID</k></Object>
