--- a/src/Assets/Comment/Show/Short.html
+++ b/src/Assets/Comment/Show/Short.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-    <div class="panel-body">
+    <div class="panel-heading">
         Комментарий к <entity><k>Entity</k>:<k>Object</k></entity>
     </div>
     <div class="panel-body">
