--- a/src/Assets/Control/Pills/MRUD.html
+++ b/src/Assets/Control/Pills/MRUD.html
@@ -24,6 +24,9 @@
         </if>
     </li>
     <li>
+        <a href="/control/<call>Entity</call>/Touch/<k>ID</k>"><i class="glyphicon glyphicon-refresh"></i></a>
+    </li>
+    <li>
         <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><i class="glyphicon glyphicon-eye-open"></i></a>
     </li>
     <li>
