--- a/src/Assets/Photo/Show/Short.html
+++ b/src/Assets/Photo/Show/Short.html
@@ -1,7 +1,8 @@
 <a href="/photo/<k>ID</k>">
-    <thumb>
+    <image>
+        <Source>
         <Width>100</Width>
         <URL>Public/uploads/photo/<k>Image</k></URL>
         <Class>img img-rounded</Class>
-    </thumb>
+    </image>
 </a>
