--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -2,11 +2,13 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-1">
-                <thumb>
-                    <URL><k>Avatar</k></URL>
+                <image>
+                    <Storage>Upload</Storage>
+                    <Source><k>Avatar</k></Source>
                     <Width>100</Width>
                     <Class>img img-responsive</Class>
-                </thumb>
+                    <Thumb/>
+                </image>
             </div>
             <div class="col-md-11">
                 <h2>
