--- a/src/Assets/bootstrap3/Widgets/Form/Radiogroup.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Radiogroup.html
@@ -1,4 +1,6 @@
 <div class="form-group">
-    <label><l><k>Label</k></l></label>
+    <label><l><k>Label</k></l>:</label>
+    <div class="spacer">
         <k>Radios</k>
+    </div>
 </div>
