--- a/src/Assets/User/Show/Avatar.html
+++ b/src/Assets/User/Show/Avatar.html
@@ -1,5 +1,5 @@
-<thumb>
-    <URL><k>Avatar</k></URL>
+<image>
+    <Source><k>Avatar</k></URL>
     <Width>64</Width>
     <Class>img img-spaced pull-left</Class>
-</thumb>
+</image>
