--- a/src/Assets/IO/Control/Short.html
+++ b/src/Assets/IO/Control/Short.html
@@ -5,7 +5,13 @@
     <td><k>Directory</k></td>
     <td>
         <image>
-            <Source>IO:Status/<k>Status</k>.png</Source>
+            <Source>
+                <Scope>IO/img/Status</Scope>
+                <Where><k>Status</k>.png</Where>
+            </Source>
+            <Width>16</Width>
+            <Default>Default:application.png</Default>
+            <Class>img</Class>
         </image>
     </td>
 </tr>
