--- a/src/Assets/Photo/Show/Short.html
+++ b/src/Assets/Photo/Show/Short.html
@@ -1,8 +1,10 @@
 <a href="/photo/<k>ID</k>">
     <image>
         <Source>
+            <Scope>Photo/Image</Scope>
+            <Where><k>Image</k></Where>
+        </Source>
         <Width>100</Width>
-        <URL>Public/uploads/photo/<k>Image</k></URL>
-        <Class>img img-rounded</Class>
+        <Class>img img-responsive</Class>
     </image>
 </a>
