--- a/src/Assets/Security/Access/Rule/Show/Short.html
+++ b/src/Assets/Security/Access/Rule/Show/Short.html
@@ -2,9 +2,15 @@
     <td><k>Weight</k></td>
     <td><k>ID</k></td>
     <td>
+
         <image>
-            <Source>Security:<k>Decision</k>.png</Source>
+            <Source>
+                <Scope>Security/img/Decision</Scope>
+                <Where><k>Decision</k>.png</Where>
+            </Source>
             <Width>16</Width>
+            <Default>Default:application.png</Default>
+            <Class>img</Class>
         </image>
     </td>
 </tr>
