--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -2,12 +2,16 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-1">
-                <image>
-                    <Storage>Upload</Storage>
-                    <Source><k>Avatar</k></Source>
+                 <image>
+                    <Source>
+                        <Storage>Upload</Storage>
+                        <Scope>User/Photo</Scope>
+                        <Where><k>Avatar</k></Where>
+                    </Source>
                     <Width>100</Width>
+                    <Default>User/img:Default<k>Gender</k>.png</Default>
+                    <Thumb></Thumb>
                     <Class>img img-responsive</Class>
-                    <Thumb/>
                 </image>
             </div>
             <div class="col-md-11">
