--- a/src/Assets/User/Show/Avatar.html
+++ b/src/Assets/User/Show/Avatar.html
@@ -1,5 +1,11 @@
 <image>
-    <Source><k>Avatar</k></URL>
+    <Source>
+        <Storage>Upload</Storage>
+        <Scope>User/Photo</Scope>
+        <Where><k>Avatar</k></Where>
+    </Source>
     <Width>64</Width>
-    <Class>img img-spaced pull-left</Class>
+    <Default>User/img:Default<k>Gender</k>.png</Default>
+    <Thumb></Thumb>
+    <Class>img img-responsive</Class>
 </image>
