--- a/src/Assets/Security/Auth/System/Loginza.html
+++ b/src/Assets/Security/Auth/System/Loginza.html
@@ -5,7 +5,7 @@
         Войдите с помощью стороннего аккаунта
     </div>
     <div class="panel-body">
-        <iframe src="http://loginza.ru/api/widget?overlay=loginza&token_url=<call>LoginzaURL</call>"
+        <iframe src="http://loginza.ru/api/widget?overlay=loginza&token_url=<call>LoginzaURL</call>?BackURL=<call>BackURL</call>"
                 style="width:100%; min-height: 150px;" scrolling="no" frameborder="no"></iframe>
     </div>
     <div class="panel-footer">
