--- a/src/Assets/bootstrap3/Main.html
+++ b/src/Assets/bootstrap3/Main.html
@@ -12,6 +12,8 @@
 
     <title/>
 
+    <meta property="og:url" content="<call>Host</call><call>URL</call>"/>
+
     <description/>
 
     <keywords/>
