--- a/src/Assets/bootstrap3/Widgets/Form/Stars.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Stars.html
@@ -3,10 +3,8 @@
 <js>jquery.star</js>
 
 <div class="form-group">
-    <label class="control-label"> <l><k>Entity</k>.Entity:<k>Node</k>.Label</l> </label>
-    <div class="controls">
-<div id="<k>Name</k>" class="stars">
+    <label><l><k>Entity</k>.Entity:<k>Node</k>.Label</l>:</label>
+    <div id="<k>Name</k>" class="input-stars">
         <k>Value</k>
     </div>
-    </div> <div id="startext_<k>Name</k>" class="stars-text">&nbsp;</div>
 </div>
