--- a/src/Assets/Project/About.html
+++ b/src/Assets/Project/About.html
@@ -1,7 +1,7 @@
 <breadcrumb href="/about">О проекте <call>Project.Title</call></breadcrumb>
 <subtitle>О проекте <call>Project.Title</call></subtitle>
 
-<div class="hero-unit">
+<div class="jumbotron">
     <h1><call>Project.Title</call></h1>
     <h2><call>Project.Description.Short</call></h2>
     <h3><call>Project.Description.Full</call></h3>
