--- a/src/Assets/Project/Frontpage.html
+++ b/src/Assets/Project/Frontpage.html
@@ -1,6 +1,6 @@
 <breadcrumb href="/">Главная</breadcrumb>
 <subtitle>Главная</subtitle>
-<div class="hero-unit">
+<div class="jumbotron">
     <h1>Codeine <call>Version.Codeine.Major</call></h1>
     <h2><call>Host</call></h2>
 </div>
