--- a/src/Assets/Server/Control/Benchmark.html
+++ b/src/Assets/Server/Control/Benchmark.html
@@ -2,7 +2,7 @@
     Версия теста: <call>Benchmark.Version</call>
 </div>
 <h2 class="page-header">Бенчмарк</h2>
-<div class="hero-unit">
+<div class="jumbotron">
 <h2>Общий счёт: <place>Overall</place>B</h2>
 <h3>Место в мире: <place>Top</place><sup>*</sup></h3>
 </div>
