--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -16,7 +16,7 @@
                     </Source>
                     <Width>100</Width>
                     <Default>User/img:Default<k>Gender</k>.png</Default>
-                    <Thumb></Thumb>
+                    <Thumb/>
                     <Class>img img-responsive</Class>
                 </image>
             </div>
