--- a/src/Assets/User/Show/Avatar.html
+++ b/src/Assets/User/Show/Avatar.html
@@ -6,6 +6,6 @@
     </Source>
     <Width>64</Width>
     <Default>User/img:Default<k>Gender</k>.png</Default>
-    <Thumb></Thumb>
+    <Thumb/>
     <Class>img img-responsive</Class>
 </image>
