--- a/src/Assets/bootstrap3/Widgets/Form/Select2_Ajax.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Select2_Ajax.html
@@ -1,7 +1,8 @@
 <div class="form-group">
-    <label for="<k>Name</k>"> <l><k>Label</k></l>:
-</label>
-    <input type="hidden" id="<k>ID</k>" name="<k>Name</k>" value="<k>Value</k>" <k>Multiple</k> />
+    <div class="select2-wrapper">
+        <label for="<k>Name</k>"> <l><k>Label</k></l>:</label>
+        <input type="hidden" id="<k>ID</k>" name="<k>Name</k>" class="select2" value="<k>Value</k>" />
+    </div>
 </div>
 <css>select2</css>
 <js>select2</js>
