--- a/src/Assets/Comment/Include.html
+++ b/src/Assets/Comment/Include.html
@@ -1,4 +1,4 @@
-<h2 class="page-header">Комментарии</h2>
+<h2 class="secondary-header">Комментарии</h2>
 
 <if value="<call>Session.User.ID</call>" null="0">
     <exec>
