--- a/src/Assets/Comment/Show/Include.html
+++ b/src/Assets/Comment/Show/Include.html
@@ -1,7 +1,13 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <entity template="Avatar">User:<k>User</k></entity>
-        <k>Body</k>
+        <div class="row">
+            <div class="col-md-1">
+                <entity template="Avatar">User:<k>User</k></entity>
+            </div>
+            <div class="col-md-10">
+                <k>Body</k>
+            </div>
+        </div>
     </div>
     <div class="panel-footer">
       <entity>User:<k>User</k></entity>
