--- a/src/Assets/User/Show/Avatar.html
+++ b/src/Assets/User/Show/Avatar.html
@@ -4,7 +4,8 @@
         <Scope>User/Photo</Scope>
         <Where><k>Avatar</k></Where>
     </Source>
-    <Width>64</Width>
+    <Width>100</Width>
+    <Height>100</Height>
     <Default>User/img:Default<k>Gender</k>.png</Default>
     <Thumb/>
     <Class>img img-responsive</Class>
