--- a/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
+++ b/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
@@ -3,8 +3,7 @@
 <js>bootstrap-wysiwyg</js>
 <css>font-awesome:min</css>
 <div class="form-group">
-    <label class="control-label" for="<k>Name</k>">
-        <l><k>Label</k></l>:</label>
+    <label for="<k>Name</k>"><l><k>Label</k></l>:</label>
 
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#<k>ID</k>">
         <div class="btn-group">
