--- a/src/Assets/Mixins/Votable.html
+++ b/src/Assets/Mixins/Votable.html
@@ -1,9 +1,9 @@
-<a rel="nofollow" target="useful_<k>ID</k>" class="ajax yes" href="/vote/for/<call>Entity</call>/<k>ID</k>">
+<a rel="nofollow" target="vote_for_<call>Entity</call>_<k>ID</k>" class="ajax yes" href="/vote/for/<call>Entity</call>/<k>ID</k>">
     <i class="glyphicon glyphicon-thumbs-up"></i>
-    <span id="useful_<k>ID</k>"><k>VoteFor</k></span>
+    <span id="vote_for_<call>Entity</call>_<k>ID</k>"><k>VoteFor</k></span>
 </a>
  &nbsp;
- <a rel="nofollow" target="unuseful_<k>ID</k>" class="ajax no" href="/vote/against/<call>Entity</call>/<k>ID</k>">
+ <a rel="nofollow" target="vote_against_<call>Entity</call>_<k>ID</k>" class="ajax no" href="/vote/against/<call>Entity</call>/<k>ID</k>">
     <i class="glyphicon glyphicon-thumbs-down"></i>
-    <span id="unuseful_<k>ID</k>"><k>VoteAgainst</k></span>
+    <span id="vote_against_<call>Entity</call>_<k>ID</k>"><k>VoteAgainst</k></span>
  </a>
