--- a/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
+++ b/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
@@ -93,7 +93,7 @@
         </div>
         <input type="text" data-edit="inserttext" id="voiceBtn" x-webkit-speech="">
     </div>
-    <div class="editor" id="<k>ID</k>">
+    <div class="editor form-control" id="<k>ID</k>">
         <k>Value</k>
     </div>
     <input type="hidden" name="<k>Name</k>" id="hd<k>ID</k>" value="<k>Value</k>" />
