--- a/src/Assets/Comment/Object.html
+++ b/src/Assets/Comment/Object.html
@@ -7,7 +7,7 @@
     <Service>Entity.Show.Static</Service>
     <Method>Do</Method>
     <Call>
-        <Entity><k>Entity</k></Entity>
+        <Entity><call>Where.Entity</call></Entity>
         <Object><k>Object</k></Object>
         <Template>Short</Template>
     </Call>
